--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~13.3.0",
     "@kamiazya/ngx-speech-synthesis": "^0.0.4",
     "accelerometer": "^1.2.0",
+    "child_process": "^1.0.2",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "npm": "^8.19.3",
