--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "child_process": "^1.0.2",
     "express": "^4.18.2",
     "install": "^0.13.0",
+    "ngx-socket-io": "^3.2.0",
     "npm": "^8.19.3",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
+    "socket.io": "^4.5.4",
     "three": "^0.146.0",
     "tslib": "^2.3.0",
     "typescript": "~4.6.2",
